--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  color: #112D4E;
   font-weight: 400;
-  color-scheme: light dark;
+  color-scheme: light ;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -19,7 +20,7 @@
   }
 
   .anchor-link-nav {
-    @apply py-[10.8px] text-[#222326] text-xl lg:text-2xl xl:text-3xl font-semibold font-sans relative two;
+    @apply py-[10.8px] text-[#112D4E] text-xl lg:text-2xl xl:text-3xl font-semibold font-sans relative two;
   }
 
   .span-left-hover {
@@ -110,7 +111,7 @@
 }
 .location-bg {
   position: relative;
-  background-image: url("/src/assets/bg1.jpg");
+  background-image: url("/src/assets/bg1.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
