--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  color: #112D4E;
+  color: #0e2743;
   font-weight: 400;
   color-scheme: light ;
   font-synthesis: none;
